--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -5,7 +5,7 @@ const projects = [
     title: "Clon de Netflix",
     description:
       "Replica funcional de Netflix utilizando la API de TMDB con más de 45000 películas y 5000 series. Incluye características como un deslizador visual, buscador integrado, paginación optimizada y una sección de detalles con información completa sobre cada contenido: título, sinopsis, calificación, tráiler, elenco y más. Un proyecto ideal para explorar funcionalidades avanzadas en aplicaciones web.",
-    imageSrc: "public/544shots_so.png",
+    imageSrc: "/544shots_so.png",
     technologies: ["React", "JavaScript", "TailwindCSS", "JSON", "Swiper"],
     githubLink: "https://github.com/BernardoPer19/Web-Peliculas",
     liveLink: "https://miwebsite.com/proyecto1",
@@ -15,7 +15,7 @@ const projects = [
     title: "E-commerce de Comidas",
     description:
       "Aplicación e-commerce para restaurantes que integra tres APIs diferentes para mostrar cócteles, platos principales y postres. Permite a los usuarios explorar el menú, añadir productos al carrito, marcarlos como favoritos y filtrar por categoría. Un proyecto diseñado para ofrecer una experiencia fluida y atractiva al usuario.",
-    imageSrc: "public/684shots_so.png",
+    imageSrc: "/684shots_so.png",
     technologies: ["React", "JavaScript", "TypeScript", "JSON", "TailwindCSS"],
     githubLink: "https://github.com/BernardoPer19/WebComidas",
     liveLink: "https://miwebsite.com/proyecto2",
@@ -26,7 +26,7 @@ const projects = [
     title: "E-commerce de Supermercado",
     description:
       "Tienda en línea construida con Next.js para aprovechar SSR y CSR, mejorando tanto el SEO como el rendimiento. Ofrece filtrado de productos por precio y categoría, además de una navegación dinámica con detalles individuales para cada artículo. Incluye un carrito de compras totalmente funcional. Próximas mejoras: integración de métodos de pago con Strapi, autenticación segura con NextAuth y Base de datos en SQLite con Prisma ORM.",
-    imageSrc: "public/610shots_so.png",
+    imageSrc: "/610shots_so.png",
     technologies: ["NextJS", "TypeScript", "TailwindCSS", "Axios", "JSON"],
     githubLink: "https://github.com/BernardoPer19/E-comerce-NEXT-TS",
     liveLink: "https://miwebsite.com/proyecto3",
@@ -37,7 +37,7 @@ const projects = [
     title: "Blog de Usuarios",
     description:
       "Aplicación de blogs desarrollada con React y TypeScript, utilizando Firebase para la autenticación y base de datos en tiempo real. Los usuarios pueden crear, editar y eliminar publicaciones, además de navegar por los blogs de otros usuarios. Incluye una página de usuario personalizada con gestión de publicaciones y cierre de sesión.",
-    imageSrc: "public/676shots_so.png",
+    imageSrc: "/676shots_so.png",
     technologies: [
       "React",
       "JavaScript",
@@ -54,7 +54,7 @@ const projects = [
     title: "Landing Page para Empresa de Abogados",
     description:
       "Landing page diseñada para una empresa de abogados, optimizada con Astro para mejorar el SEO y garantizar tiempos de carga rápidos. La página incluye navegación dinámica, permitiendo a los usuarios acceder a diferentes secciones de manera sencilla. Además, se ha integrado un sistema de gestión de formularios en React para facilitar la interacción con los visitantes, como solicitudes de consultas o contacto. Un proyecto enfocado en la eficiencia y la accesibilidad para brindar una experiencia fluida al usuario.",
-    imageSrc: "public/269shots_so.png",
+    imageSrc: "/269shots_so.png",
     technologies: ["Astro", "React", "TailwindCSS", "TypeScript"],
     githubLink: "https://github.com/BernardoPer19/WebAbog",
     liveLink: "https://miwebsite.com/proyecto3",
@@ -63,7 +63,7 @@ const projects = [
     title: "Landing Page para empresa digital",
     description:
       "Landing page desarrollada con Astro para garantizar un SEO eficiente y un rendimiento rápido. Las secciones interactivas utilizan React, combinando funcionalidad con diseño atractivo. Ideal para empresas que buscan una presencia web moderna y optimizada.",
-    imageSrc: "public/522shots_so.png",
+    imageSrc: "/522shots_so.png",
     technologies: ["Astro", "React", "JavaScript", "TailwindCSS"],
     githubLink: "https://github.com/BernardoPer19/Landing-Empresa-Digital",
     liveLink: "https://miwebsite.com/proyecto3",
