--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -34,7 +34,7 @@
       <div
         class="flex items-center justify-center gap-4 mt-5 lg:justify-center"
       >
-        <a href="public/AgustinBernardoPeredo.pdf" download>
+        <a href="/AgustinBernardoPeredo.pdf" download>
           <button
             class="px-6 py-3 bg-white text-green-900 rounded-md hover:bg-green-100"
             data-aos="fade-up"
