--- a/src/sections/SobreMi.astro
+++ b/src/sections/SobreMi.astro
@@ -34,7 +34,7 @@
     data-aos-duration="1000"
   >
     <img
-      src="public/caca2.jpg"
+      src="/caca2.jpg"
       alt="Agustin Bernardo Peredo Rodríguez, desarrollador frontend, GitHub"
       class="z-30 w-64 h-64 rounded-full object-cover border-4 border-white"
     />
