--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -20,15 +20,13 @@
         data-aos-easing="linear"
         data-aos-duration="2000"
       >
-        Con <span class="font-semibold text-green-400">19 años</span> y más de <span
+        Tengo <span class="font-semibold text-green-400">19 años</span> y más de <span
           class="font-semibold text-green-400">8 meses de experiencia</span
         > en el desarrollo de aplicaciones web, me especializo en crear soluciones
         <span class="text-green-500">interactivas</span>, <span
-          class="text-green-500">escalables</span
-        > y <span class="text-green-500">modernas</span>. Mi objetivo es ayudar
+          class="text-green-500">escalables</span>. Mi objetivo es ayudar
         a <span class="font-semibold text-green-400">startups</span> y empresas a
-        llevar sus proyectos al siguiente nivel, ofreciendo soluciones a medida que
-        mejoren la experiencia del usuario.
+         sus proyectos web, ofreciendo soluciones rapidas y eficientes para el usuario.
       </p>
 
       <div
