--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -14,7 +14,7 @@ const projects = [
   {
     title: "E-commerce de Comidas",
     description:
-      "Aplicación e-commerce para restaurantes que integra tres APIs diferentes para mostrar cócteles, platos principales y postres. Permite a los usuarios explorar el menú, añadir productos al carrito, marcarlos como favoritos y filtrar por categoría. Un proyecto diseñado para ofrecer una experiencia fluida y atractiva al usuario.",
+      "Aplicación e-commerce para restaurantes que integra tres APIs diferentes para mostrar cócteles, platos principales y postres. Permite a los usuarios explorar el menú, añadir productos al carrito, marcarlos como favoritos y filtrar por categoría. Un proyecto diseñado para ofrecer una experiencia fluida.",
     imageSrc: "/684shots_so.png",
     technologies: ["React", "JavaScript", "TypeScript", "JSON", "TailwindCSS"],
     githubLink: "https://github.com/BernardoPer19/WebComidas",
@@ -25,7 +25,7 @@ const projects = [
   {
     title: "E-commerce de Supermercado",
     description:
-      "Tienda en línea construida con Next.js para aprovechar SSR y CSR, mejorando tanto el SEO como el rendimiento. Ofrece filtrado de productos por precio y categoría, además de una navegación dinámica con detalles individuales para cada artículo. Incluye un carrito de compras totalmente funcional. Próximas mejoras: integración de métodos de pago con Strapi, autenticación segura con NextAuth y Base de datos en SQLite con Prisma ORM.",
+      "Tienda en línea construida con Next.js para aprovechar SSR y CSR, mejorando tanto el SEO como el rendimiento. Ofrece filtrado de productos por precio y categoría, además de una navegación dinámica con detalles individuales para cada artículo. Incluye un carrito de compras totalmente funcional. Próximas mejoras: integración de métodos de pago con Strapi, autenticación segura con NextAuth y Base de datos en PosgreSQL con Prisma ORM.",
     imageSrc: "/610shots_so.png",
     technologies: ["NextJS", "TypeScript", "TailwindCSS", "Axios", "JSON"],
     githubLink: "https://github.com/BernardoPer19/E-comerce-NEXT-TS",
