--- a/src/sections/SobreMi.astro
+++ b/src/sections/SobreMi.astro
@@ -1,4 +1,6 @@
-<section class="flex flex-col md:flex-row-reverse items-center justify-center max-w-[1280px] m-auto">
+<section
+  class="flex flex-col md:flex-row-reverse items-center justify-center max-w-[1280px] m-auto"
+>
   <!-- Contenedor del texto -->
   <div
     class="w-full md:w-1/2 space-y-4 text-center md:text-left"
@@ -6,15 +8,22 @@
     data-aos-easing="linear"
     data-aos-duration="1200"
   >
-    <h2 class="text-3xl font-semibold text-white">Sobre mí</h2>
-    <p class="text-lg text-gray-300">
-      Hola, soy Agustín. Soy un desarrollador apasionado por el frontend, la
-      creación de aplicaciones web y la tecnología en general. Me gusta resolver
-      problemas complejos y construir soluciones intuitivas y escalables. Mi
-      objetivo es seguir aprendiendo y desarrollando proyectos innovadores que
-      puedan ayudar a las personas. Estoy constantemente explorando nuevas
-      tecnologías y herramientas para mejorar mis habilidades y alcanzar mis
-      metas profesionales.
+    <h2 class="text-2xl text-white">Sobre mí</h2>
+    <p class="text-lg text-gray-300 text-wrap">
+      Hola, soy Agustín Bernardo. Soy estudiante de Ingeniería en Informática de
+      4to semestre en la UMSS (Universidad Mayor de San Simón). <br />
+      <strong class="font-bold"> Estoy especializado</strong> en el desarrollo frontend
+      para la creación de páginas web y aplicaciones web.
+      <br />
+      <strong> Soy bueno en el trabajo en equipo</strong>, manejando una buena
+      comunicación y organización a medida que avanzan los proyectos. <br />
+      He trabajado en varios proyectos personales y colaborativos, lo que me ha permitido
+      aplicar mis conocimientos en desarrollo web y mejorar mis habilidades técnicas.
+      <br />
+      <strong class="font-bold">Mis tecnologías</strong> más usadas son React, Next.js
+      y TypeScript. <strong class="font-extrabold"
+        >Estoy dispuesto a trabajar y demostrar mis habilidades.</strong
+      >
     </p>
     <a
       href="https://github.com/BernardoPer19"
@@ -36,7 +45,7 @@
     <img
       src="/caca2.jpg"
       alt="Agustin Bernardo Peredo Rodríguez, desarrollador frontend, GitHub"
-      class="z-30 w-64 h-64 rounded-full object-cover border-4 border-white"
+      class="z-30 w-72 h-72 rounded-full object-cover border-4 border-white"
     />
   </div>
 </section>
