--- a/src/sections/SobreMi.astro
+++ b/src/sections/SobreMi.astro
@@ -11,17 +11,13 @@
     <h2 class="text-2xl text-white">Sobre mí</h2>
     <p class="text-lg text-gray-300 text-wrap">
       Hola, soy Agustín Bernardo. Soy estudiante de Ingeniería en Informática de
-      4to semestre en la UMSS (Universidad Mayor de San Simón). <br />
-      <strong class="font-bold"> Estoy especializado</strong> en el desarrollo frontend
-      para la creación de páginas web y aplicaciones web.
-      <br />
+      4to semestre en la Universidad Mayor de San Simón. 
+      
       <strong> Soy bueno en el trabajo en equipo</strong>, manejando una buena
       comunicación y organización a medida que avanzan los proyectos. <br />
       He trabajado en varios proyectos personales y colaborativos, lo que me ha permitido
-      aplicar mis conocimientos en desarrollo web y mejorar mis habilidades técnicas.
-      <br />
-      <strong class="font-bold">Mis tecnologías</strong> más usadas son React, Next.js
-      y TypeScript. <strong class="font-extrabold"
+      aplicar mis conocimientos en desarrollo web <br>
+      <strong class="font-extrabold"
         >Estoy dispuesto a trabajar y demostrar mis habilidades.</strong
       >
     </p>
