--- a/src/sections/SobreMi.astro
+++ b/src/sections/SobreMi.astro
@@ -10,7 +10,7 @@
   >
     <h2 class="text-2xl text-white">Sobre mí</h2>
     <p class="text-lg text-gray-300 text-wrap">
-      Hola, soy Agustín Bernardo. Soy estudiante de Ingeniería en Informática de
+     Soy estudiante de Ingeniería en Informática de
       4to semestre en la Universidad Mayor de San Simón. 
       
       <strong> Soy bueno en el trabajo en equipo</strong>, manejando una buena
