--- a/src/sections/Experiencia.astro
+++ b/src/sections/Experiencia.astro
@@ -31,8 +31,7 @@
       <p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
         En este proyecto, desempeñé el rol de Desarrollador Frontend utilizando
         tecnologías como Astro y React. A través de este trabajo, implementé
-        nuevas funcionalidades y optimicé la interfaz de usuario (UI), mejorando
-        la experiencia para los usuarios finales.
+        nuevas funcionalidades y optimicé la interfaz de usuario (UI).
       </p>
       <a
         href="/Bicidatos_BPR.pdf"
@@ -82,12 +81,11 @@
         Desempeñé el rol de desarrollador principal en un proyecto colaborativo,
         trabajando junto a tres desarrolladores. Este proyecto tuvo un impacto
         significativo, beneficiando a más de 250 personas y a más de 5 colegios.
-        Su objetivo fue proporcionar una plataforma educativa innovadora que
+        Su objetivo fue proporcionar una plataforma educativa  que
         facilitara la orientación y la toma de decisiones a los estudiantes,
-        mejorando la experiencia educativa de forma sustancial. Fue una
-        experiencia de aprendizaje enriquecedora, en la que contribuí al diseño
-        y la implementación de soluciones tecnológicas clave para el éxito del
-        proyecto.
+        mejorando la experiencia educativa. Fue una
+        experiencia de aprendizaje en la que contribuí al diseño
+        y la implementación de soluciones.
       </p>
     </li>
     <li class="ms-6">
