--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -25,7 +25,7 @@
         > en el desarrollo de aplicaciones web, me especializo en crear soluciones
         <span class="text-green-500">interactivas</span>, <span
           class="text-green-500">escalables</span>. Mi objetivo es ayudar
-        a <span class="font-semibold text-green-400">startups</span> y empresas a
+        a <span class="font-semibold text-green-400">startups</span> y empresas en
          sus proyectos web, ofreciendo soluciones rapidas y eficientes para el usuario.
       </p>
 
