--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -36,8 +36,8 @@ import 'aos/dist/aos.css';
 
     <!-- Twitter Card (Twitter Optimization) -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{title} | Portafolio de Agustín Bernardo Peredo">
-    <meta name="twitter:description" content="Explora el portafolio de Agustín Bernardo Peredo, desarrollador frontend con experiencia en React, TypeScript y diseño web.">
+    <meta name="twitter:title" content="Portafolio | Agustín Bernardo Peredo">
+    <meta name="twitter:description" content="Portafolio de Agustin Bernardo Peredo Rodriguez, desarrollador de aplicaciones web con multiples tecnologias">
   
 
     <!-- Author and Robots -->
