--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,8 +30,8 @@ import 'aos/dist/aos.css';
     <meta name="description" content="Descubre el portafolio de Agustín Bernardo Peredo, desarrollador frontend especializado en React, TypeScript, diseño web, y desarrollo de aplicaciones modernas.">
 
     <!-- Open Graph (Social Media) -->
-    <meta property="og:title" content="{title} | Portafolio de Agustín Bernardo Peredo">
-    <meta property="og:description" content="Explora el portafolio de Agustín Bernardo Peredo, un desarrollador frontend con experiencia en tecnologías como React, TypeScript, y diseño web.">
+    <meta property="og:title" content="Portafolio | Agustín Bernardo Peredo">
+    <meta property="og:description" content="Portafolio de Agustin Bernardo Peredo Rodriguez, desarrollador de aplicaciones web con multiples tecnologias.">
    
 
     <!-- Twitter Card (Twitter Optimization) -->
