--- a/src/components/ProyectCard.astro
+++ b/src/components/ProyectCard.astro
@@ -63,11 +63,9 @@ const {
           <a
             href={liveLink}
             target="_blank"
-            class="text-white px-6 py-3 z-40 rounded-full text-sm cursor-pointer"
+            class="text-black px-6 py-3 z-40 rounded-full text-sm cursor-pointer"
           >
-            <button>
-              Ver en Live
-            </button>
+            
           </a>
         )
       }
