--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -29,7 +29,7 @@ import ContactForm from "./ContactForm.astro";
           <a href="https://github.com/BernardoPer19" class="hover:text-green-400 transition-colors duration-300">
             <i class="fab fa-github"></i>
           </a>
-          <a href="" class="hover:text-red-400 transition-colors duration-300">
+          <a href="https://www.linkedin.com/in/bernardo-peredo-50a1552a0/" class="hover:text-green-400 transition-colors duration-300">
             <i class="fab fa-linkedin"></i>
           </a>
           <a href="https://www.instagram.com/b.eww_/" class="hover:text-green-400 transition-colors duration-300">
