--- a/src/sections/Header.astro
+++ b/src/sections/Header.astro
@@ -4,7 +4,7 @@
     data-aos="fade-left"
     data-aos-duration="3000"
   >
-    <div class="flex flex-col gap-5 text-white text-center lg:text-left">
+    <div class="flex flex-col gap-5 text-white text-center lg:text-left w-[700px]">
       <h1
         class="text-4xl font-bold text-center"
         data-aos="fade-left"
@@ -12,7 +12,7 @@
         data-aos-duration="2000"
       >
         Hola, soy <span class="text-green-400">Agustín Peredo </span> desarrollador
-        <span class="font-semibold text-green-600">frontend freelance</span>
+        <span class="font-semibold text-green-400">Front-End</span>
       </h1>
       <p
         class="font-medium text-lg text-center"
@@ -21,7 +21,7 @@
         data-aos-duration="2000"
       >
         Tengo <span class="font-semibold text-green-400">19 años</span> y más de <span
-          class="font-semibold text-green-400">8 meses de experiencia</span
+          class="font-semibold text-green-400">1 año de experiencia</span
         > en el desarrollo de aplicaciones web, me especializo en crear soluciones
         <span class="text-green-500">interactivas</span>, <span
           class="text-green-500">escalables</span>. Mi objetivo es ayudar
@@ -32,7 +32,7 @@
       <div
         class="flex items-center justify-center gap-4 mt-5 lg:justify-center"
       >
-        <a href="/AgustinBernardoPeredo.pdf" download>
+        <a href="/AgustinPeredoCV.pdf" download>
           <button
             class="px-6 py-3 bg-white text-green-900 rounded-md hover:bg-green-100"
             data-aos="fade-up"
