--- a/src/sections/SobreMi.astro
+++ b/src/sections/SobreMi.astro
@@ -8,8 +8,8 @@
     data-aos-easing="linear"
     data-aos-duration="1200"
   >
-    <h2 class="text-2xl text-white">Sobre mí</h2>
-    <p class="text-lg text-gray-300 text-wrap">
+    <h2 class="text-4xl font-bold text-white">Sobre mí</h2>
+    <p class="text-lg text-gray-400 text-wrap">
      Soy estudiante de Ingeniería en Informática de
       4to semestre en la Universidad Mayor de San Simón. 
       
